--- a/src/Style/Settings.css
+++ b/src/Style/Settings.css
@@ -12,12 +12,6 @@
     padding: 1rem 1.5rem;
 }
 
-.setting .header div:first-child {
-    padding: 0;
-    margin: 0;
-    font-weight: 500;
-}
-
 .setting-checkbox {
     width: 2.5rem;
     border-radius: 1rem;
@@ -58,4 +52,5 @@
     border-bottom-right-radius: 1rem;
     opacity: 0.7;
     font-size: 0.9rem;
+    z-index: -1;
 }
